design-v2/components/pages/styles.module.scss
@import 'design-v2/variables';

$spacer: 1.4rem;
$grid-responsive-for-sections: repeat(auto-fit, minmax(300px, 1fr));
$grid-responsive-for-cards: repeat(auto-fit, minmax(200px, 1fr));
$support-card-width: 21.5rem;
.unset-bottom {
  padding-bottom: 0;
}

.unset-top {
  padding-top: 0;
}

.servicePage {
  .features {
    display: flex;
    flex-wrap: wrap;
    gap: 2rem;

    .feature {
      flex: 1;
      padding: 1rem;
      background-color: var(--gray-100);
      position: relative;

      @media (max-width: $breakpoint-sm) {
        flex: auto;
      }

      &:not(:last-child) {
        &::after {
          position: absolute;
          bottom: 0;
          right: -1rem;
          content: '';
          height: 100%;
          border: 1px dashed var(--gray-300);
        }
      }

      &-title {
        color: var(--primary);
      }
    }
  }

  .how-it-works {
    display: grid;
    grid-template-columns: $grid-responsive-for-sections;
    align-items: center;

    .content {
      .button {
        float: right;
        margin-top: 2rem;
        margin-right: 10px;
      }
    }
  }

  .video-tutorial {
    margin-left: 20px;
  }

  .testimonial {
    min-height: 14.5rem;
    background-color: var(--gray-200);
    padding: $spacer;

    .header {
      display: flex;

      .picture {
        width: 3.5rem;
        height: 3.5rem;
        border-radius: 50%;
      }

      .info {
        margin-left: 1rem;

        p {
          margin-bottom: 0.5rem;
        }

        &-role {
          color: var(--primary);
        }
      }
    }

    .content {
      font-style: italic;
    }

    .button {
      float: right;
      margin-top: 2rem;
    }
  }

  .main {
    display: grid;
    grid-template-columns: $grid-responsive-for-sections;
    align-items: flex-start;
    gap: var(--spacer);

    .note {
      margin-top: var(--spacer);
    }

    .action {
      float: right;
      margin: 1rem 0 0;
    }

    .main-description {
      color: #212121;
      font-size: 16px;
      font-style: normal;
      font-weight: 400;
      line-height: 24px;
      letter-spacing: 0.026px;
    }
    .main-note {
      margin-top: var(--spacer);
    }
  }

  .what-is-included,
  .additional {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;

    ul {
      margin-left: 1.5rem;

      li {
        line-height: 2rem;
        list-style-type: disc;
      }
    }

    .section {
      max-width: 95ch;

      .contactBtn {
        margin-top: 2.5rem;
      }
      .list-title-wrapper {
        display: flex;
        gap: 10px;
        align-items: flex-start;
        .list-title {
          display: flex;
          flex-direction: column;
        }
        .video-icon {
          margin-top: 4px;
          cursor: pointer;
        }
      }
    }
  }

  .additional {
    flex-wrap: wrap-reverse;
    gap: 1rem;

    img {
      width: 100%;
      max-width: 36rem;
      height: auto;
    }

    .section {
      max-width: 70ch;

      ul {
        margin-left: 2.5rem;
      }

      .group {
        display: flex;
        flex-wrap: wrap;
        gap: 1rem;

        .action {
          text-transform: none;
        }
      }
    }
  }

  .additional-reverse {
    flex-direction: row-reverse;
  }

  .statistics {
    display: grid;
    grid-template-columns: $grid-responsive-for-cards;
    gap: 2rem;

    &-box {
      position: relative;
      padding: 1rem;
      border: 1px solid var(--gray-300);
      border-bottom: 1px solid var(--primary);

      .title {
        color: var(--gray-900);
        font-weight: 300;
      }

      .count {
        font-size: 2rem;
        color: var(--primary);
      }

      .caption {
        color: var(--gray-900);
      }

      .badge {
        position: absolute;
        top: -1rem;
        left: -1rem;
        padding: 0.2rem 0.4rem;
        color: var(--white);
        background-color: $status-icon-background;
        border-radius: 0.2rem;
      }
    }

    .active {
      background-color: #fbf6f2;
    }

    .link {
      text-decoration: none;
    }
  }
  .statsButton {
    float: right;
  }

  .form {
    box-shadow: none;
    background-color: var(--gray-100);

    .caption {
      max-width: 80ch;
      line-height: 2;
    }

    .textfield {
      input {
        border: none;
      }
    }

    .button {
      margin-top: 2rem;
    }
  }

  .note {
    margin-top: 0.3rem;
    text-align: right;
  }

  .services {
    margin-top: 3rem;
    display: grid;
    grid-template-columns: $grid-responsive-for-cards;
    gap: 2rem;

    .service {
      padding: 2rem;
      flex: 1;
      border: 2px solid var(--primary);
      border-radius: 0.4rem;
      text-align: center;

      .title {
        margin-top: 1rem;
        font-size: 1.3rem;
        font-weight: 500;
      }

      .image {
        max-height: 50px;
      }
    }
  }

  .benefits {
    display: grid;
    gap: 2rem;
    grid-template-columns: repeat(2, 1fr);

    @media (max-width: $breakpoint-sm) {
      grid-template-columns: 1fr;
    }

    .benefit {
      position: relative;
      background-color: var(--gray-100);
      display: flex;
      padding: 0.5rem 1rem;

      &-icon {
        max-height: 4rem;
        margin-right: 1rem;
      }

      &-content {
        margin: 1rem 0;
      }

      &:nth-child(odd) {
        &::after {
          position: absolute;
          bottom: 0;
          right: -1rem;
          content: '';
          height: 100%;
          border: 1px dashed var(--gray-300);
        }
      }
    }
  }

  .contact {
    display: grid;
    gap: 2rem;
    grid-template-columns: $grid-responsive-for-sections;
    justify-content: space-between;

    .content {
      width: 100%;
      margin-top: auto;
      flex: 1;
    }

    .box {
      width: 100%;
      padding: 1rem;
      border: 2px solid var(--gray-300);
    }

    .image {
      margin-left: auto;
    }
  }

  .banner {
    max-width: 100%;
    height: auto;
  }
}

.carousel-wrapper {
  display: flex;
  flex-direction: column;
  .carousel-items {
    display: flex;
    justify-content: space-between;
    gap: 35px;
  }
  .carousel-item-wrapper {
    border: 1px solid #b75400;
    background: #fff;
    height: 104px;
    display: flex;
    flex-direction: column;
    justify-content: center;
  }
  .carousel-item {
    width: 212px;
    max-height: 104px;
    padding: 16px;
  }

  .carousel-item-unset {
    padding: 0;
  }

  .background {
    background: #e85e13;
  }

  .data-carousel-item {
    border: 1px solid #b75400;
    min-width: 212px;
    height: 104px;
    padding: 16px;
  }
  .fast-carousel-item {
    border: 1px solid #b75400;
    min-width: 212px;
    height: 104px;
    padding: 16px;
    &:last-child {
      padding: 28px;
    }
  }
  .link-wrapper {
    display: flex;
    justify-content: flex-end;
    margin-top: 24px;
    .link {
      padding: 8px 16px;
    }
  }
}

.layout-mini-wrapper {
  .cards-wrapper {
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax($support-card-width, 1fr));
    grid-gap: 1rem;
    margin-top: 2rem;
    .material-wrapper {
      border-radius: 4px;
      border: 2px solid #9e9e9e;
      height: 213px;
      padding: 8px;
      cursor: pointer;
      .material-inner-wrapper {
        background: #b75400;
        border-radius: 4px;
        display: flex;
        align-items: center;
        gap: 30px;
        height: 100%;
        padding: 0 27px 0 49px;
        .material-title {
          color: #fff;
          font-size: 24px;
          font-style: normal;
          font-weight: 500;
          line-height: 31px;
          letter-spacing: 0.3px;
        }
      }
    }
    .materials-card {
      display: flex;
      justify-content: center;
      flex-direction: column;
      width: 100%;
      height: 100%;
      .materials-image {
        width: 100%;
        height: 100%;
        object-fit: contain;
      }
      .button-wrapper {
        width: 100%;
        display: flex;
        justify-content: center;
        .material-button {
          margin-top: 24px;
          text-align: center;
          width: max-content;
          background: #fff;
          cursor: pointer;
          &:hover {
            background: #fff;
          }
        }
      }
    }
  }
}

